基本完成了用户答题的样式

--- a/pages/exam/member/index.wxml
+++ b/pages/exam/member/index.wxml
@@ -11,7 +11,7 @@
           </view>
         </view>
         <view class="exam-actions">
-          <button class="start-btn" bindtap="startExam" data-id="{{item.id}}">开始考试</button>
+          <button class="start-btn" bindtap="startExam" data-id="{{item.id}}"data-duration="{{item.duration}}">开始考试</button>
         </view>
       </view>
     </view>
