--- a/pages/exam/member/question/index.wxss
+++ b/pages/exam/member/question/index.wxss
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 16px;
-  color: #3c7aff;
+  color: #fa7900;
   margin-bottom: 10px;
 }
 
@@ -58,7 +58,7 @@
 .submit-btn {
   width: 100%;
   padding: 15px;
-  background-color: #3c7aff;
+  background-color: #b90f0f;
   color: white;
   border: none;
   border-radius: 8px;
@@ -74,7 +74,7 @@
 
 .pagination button {
   padding: 8px 15px;
-  background-color: #3c7aff;
+  background-color: #f71d00;
   color: white;
   border: none;
   border-radius: 5px;
