优化了提交试卷第一题答案有偏差的bug

--- a/pages/detail/examDetail/detail.wxml
+++ b/pages/detail/examDetail/detail.wxml
@@ -51,5 +51,7 @@
         </view>
       </block>
     </view>
+    <!-- 每个题型之间增加间隔 -->
+    <view class="type-separator"></view>
   </block>
 </view>
