基本实现了用户一键举报页面的样式搭建

--- a/pages/my/report/index.wxml
+++ b/pages/my/report/index.wxml
@@ -1,2 +1,4 @@
-<!--pages/my/report/index.wxml-->
-<text>pages/my/report/index.wxml</text>
+<view class="container">
+  <text class="welcome-text">欢迎使用一键举报功能</text>
+  <text class="loading-text">正在判断身份，请稍候...</text>
+</view>
