--- a/pages/my/report/index.wxss
+++ b/pages/my/report/index.wxss
@@ -1,1 +1,20 @@
-/* pages/my/report/index.wxss */
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa;
+}
+
+.welcome-text {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.loading-text {
+  font-size: 16px;
+  color: #666;
+}
