--- a/pages/my/report/admin/index.wxml
+++ b/pages/my/report/admin/index.wxml
@@ -1,2 +1,38 @@
-<!--pages/my/report/admin/index.wxml-->
-<text>pages/my/report/admin/index.wxml</text>
+<view class="page">
+  <!-- 搜索栏 -->
+  <view class="search-bar">
+    <input class="search-input" placeholder="请输入举报描述" bindinput="onSearchInput" />
+    <button class="search-btn" bindtap="onSearch">搜索</button>
+  </view>
+
+  <!-- 举报信息列表 -->
+  <view class="info">
+    <block wx:for="{{reportList}}" wx:key="index">
+      <view class="info-item" bindtap="goToDetail" data-reportId="{{item.id}}">
+        <view class="info-content">
+          <text class="info-title">举报类型：{{item.description}}</text>
+          <!-- 显示时间 -->
+          <text class="info-time">举报时间：{{item.createTime}}</text>
+        </view>
+      </view>
+    </block>
+    
+    <view wx:if="{{reportList.length === 0}}" class="no-content-container">
+      <text class="no-content-text">暂无内容</text>
+    </view>
+  </view>
+
+  <!-- 底部分页导航 -->
+  <view class="pagination">
+    <text class="pagination-text">共 {{totalPages}} 页</text>
+    <picker mode="selector" range="{{pageSizes}}" bindchange="onPageSizeChange">
+      <view class="pagination-dropdown">{{pageSize}}条/页</view>
+    </picker>
+    <view class="pagination-input-container">
+      <text class="pagination-text">前往</text>
+      <input class="pagination-input" type="number" value="{{goToPage}}" bindinput="onInputPageChange" />
+      <text class="pagination-text">页</text>
+      <button class="pagination-go-btn" bindtap="onGoToPage">跳转</button>
+    </view>
+  </view>
+</view>
