--- a/pages/my/report/admin/index.wxss
+++ b/pages/my/report/admin/index.wxss
@@ -1,1 +1,149 @@
-/* pages/my/report/admin/index.wxss */
+/* 搜索栏样式 */
+.search-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10rpx 20rpx;
+  background-color: #fff;
+  box-shadow: 0 2rpx 5rpx rgba(0, 0, 0, 0.1);
+}
+
+.search-input {
+  flex: 1;
+  height: 70rpx;
+  padding: 0 10rpx;
+  font-size: 26rpx;
+  border: 1rpx solid #ddd;
+  border-radius: 5rpx;
+}
+
+.search-btn {
+  background-color: #ff0800;
+  color: white;
+  border: none;
+  border-radius: 5rpx;
+  padding: 8rpx 20rpx;
+  font-size: 26rpx;
+  margin-left: 10rpx;
+}
+
+/* 举报信息项 */
+.info-item {
+  display: flex;
+  margin: 20rpx;
+  background-color: #f9f9f9;
+  border-radius: 20rpx;
+  overflow: hidden;
+  box-shadow: 0 4rpx 8rpx rgba(0, 0, 0, 0.1);
+}
+
+.info-image {
+  width: 220rpx;
+  height: 140rpx;
+  flex-shrink: 0;
+}
+
+.info-content {
+  padding: 10rpx 20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.info-title {
+  font-size: 30rpx;
+  font-weight: bold;
+  color: #333;
+}
+
+.info-description {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: 10rpx;
+}
+.info-time {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: 10rpx;
+}
+.info-date {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: 10rpx;
+}
+
+/* 无内容提示 */
+.no-content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f9f9f9;
+}
+
+.no-content-text {
+  font-size: 18px;
+  color: #999;
+  font-weight: 500;
+  text-align: center;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* 底部分页 */
+.pagination {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 120rpx;
+  background-color: #ffffff;
+  box-shadow: 0 -2rpx 5rpx rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1000;
+  padding: 10rpx 20rpx;
+}
+
+.pagination-text {
+  font-size: 26rpx;
+  color: #333;
+}
+
+.pagination-dropdown {
+  font-size: 26rpx;
+  color: #615c59;
+  background-color: #f5f5f5;
+  padding: 10rpx 20rpx;
+  border-radius: 10rpx;
+  border: 1rpx solid #ddd;
+  cursor: pointer;
+}
+
+.pagination-input-container {
+  display: flex;
+  align-items: center;
+}
+
+.pagination-input {
+  width: 80rpx;
+  height: 40rpx;
+  font-size: 26rpx;
+  text-align: center;
+  border: 1rpx solid #ddd;
+  border-radius: 5rpx;
+  margin: 0 10rpx;
+}
+
+.pagination-go-btn {
+  font-size: 26rpx;
+  color: #ffffff;
+  background-color: #ff0800;
+  padding: 10rpx 20rpx;
+  border-radius: 8rpx;
+  border: none;
+  margin-left: 10rpx;
+}
