实现了管理员咨询上传的删除接口的连接

--- a/pages/my/antiFraudList/admin/index.wxml
+++ b/pages/my/antiFraudList/admin/index.wxml
@@ -33,6 +33,7 @@
           <text class="info-title">{{item.title}}</text>
           <text class="info-date">{{item.date}}</text>
         </view>
+        <button class="delete-btn" bindtap="onDelete" data-id="{{item.id}}">删除</button>
       </view>
     </block>
     <view wx:if="{{infoList.length === 0}}" class="no-content-container">
