实现了管理员咨询上传的新增咨询接口连接

--- a/pages/my/antiFraudList/admin/index.wxml
+++ b/pages/my/antiFraudList/admin/index.wxml
@@ -58,4 +58,6 @@
       <button class="pagination-go-btn" bindtap="onGoToPage">跳转</button>
     </view>
   </view>
+ <!-- 新增按钮 -->
+ <button class="add-btn" bindtap="goToAddPage">➕</button>
 </view>
